Bug 101588 - FORMATTING: Format Cells > Background > No Fill fails with non-continuous selection of colored cells
Summary: FORMATTING: Format Cells > Background > No Fill fails with non-continuous sel...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium minor
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.4.0 target:5.3.0.1 target:5....
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-08-18 01:16 UTC by brucehohl
Modified: 2017-08-11 15:55 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description brucehohl 2016-08-18 01:16:29 UTC
To reproduce:
1 - Add background color to cell A1 and A3
2 - Select cells A1:A3
3 - Format > Cells > Background tab, Click 'No Fill', Click 'OK'.
Cell background colors are not removed.
This works in 5.1.x versions.
Comment 1 m_a_riosv 2016-08-18 07:18:35 UTC
I can't reproduce.
Win10x64
Version: 5.2.1.1 (x64)
Build ID: 2d75cf29e6d05e44c404f0547047f1da6563d380
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
Locale: es-ES (es_ES); Calc: CL

Please try resetting the user profile, sometimes solves strange issues.
https://wiki.documentfoundation.org/UserProfile
Usually it's enough renaming/deleting the file "user/registrymodifications.xcu",  it affects all the options in Menu/Tools/Options, and the files "user/basic/dialog.xlc" and "scrip.xlc" are overwritten, additionally custom colors in "user/config/standard.soc" are lost.
Comment 2 brucehohl 2016-08-18 11:09:38 UTC
LO & OS info:
Version: 5.2.1.1 (x64)
Build ID: 2d75cf29e6d05e44c404f0547047f1da6563d380
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: en-US (en_US); Calc: single

Also failed on an Ubuntu Linux OS with LO from the LibreOffice-5-2 PPA.

In my steps to reproduce cell A2 should have no background color or a different background color versus A1 & A3 so that the colored cells are non-continuous with respect to color/fill attribute.

'No Fill' as a block (A1:A3) from 'Format > Cells' window fails.
BUT 'No Fill' succeeds if the toolbar 'Background Color' control is used.
Comment 3 Joseph Conner 2016-08-19 21:44:19 UTC
Confirmed on Ubuntu 16.04 LTS 64-bit. LibreOffice 5.2.0.4
Comment 4 Luuk 2016-08-20 07:54:19 UTC
(In reply to brucehohl from comment #2)
> LO & OS info:
> Version: 5.2.1.1 (x64)
> Build ID: 2d75cf29e6d05e44c404f0547047f1da6563d380
> CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
> Locale: en-US (en_US); Calc: single
> 
> Also failed on an Ubuntu Linux OS with LO from the LibreOffice-5-2 PPA.
> 
> In my steps to reproduce cell A2 should have no background color or a
> different background color versus A1 & A3 so that the colored cells are
> non-continuous with respect to color/fill attribute.
> 
> 'No Fill' as a block (A1:A3) from 'Format > Cells' window fails.
> BUT 'No Fill' succeeds if the toolbar 'Background Color' control is used.

Windows 10 (version 1607)
LibreOffice 5.2.0.4 (x64)

I can confirm:
'No Fill' as a block (A1:A3) from 'Format > Cells' window fails.
BUT 'No Fill' succeeds if the toolbar 'Background Color' control is used.
Comment 5 Pedro 2016-08-20 09:05:21 UTC
Confirmed under Windows 10 x64 using v5.2.1.1 

This is a Regression in branch 5.2

It also occurs under Linux so I changed the Platform to All.
Comment 6 m_a_riosv 2016-08-20 13:26:07 UTC
I can see now, if some cell in the block has a different background 'Format/Cell/Background - no fill' fails.
Comment 7 Xisco Faulí 2016-09-01 16:21:45 UTC
Issue introduced in range f2070db3f2ad7e0c4b7d7233b5999bcf869226b5..37d735b27477cc1b72063b0ef307a437fa5233a1
Comment 8 Xisco Faulí 2016-09-01 16:34:08 UTC
Hi Oliver,

it looks like your commit e5246a6b679cfd15ba9ec6db23448066f34c7c08 introduced this regression. Could you please take a look at it whenever you have some time?

Regards
Comment 9 Xisco Faulí 2016-09-26 15:43:59 UTC
Adding Cc: to Oliver Specht
Comment 10 Commit Notification 2016-12-12 20:25:32 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=429be969b39867d6d9f36978c9ac15b601e78ba6

Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Eike Rathke (retired, only occasionally showing up) 2016-12-12 20:40:51 UTC
Pending
review https://gerrit.libreoffice.org/31923 for 5-2
build https://gerrit.libreoffice.org/31922 for 5-3
Comment 12 Commit Notification 2016-12-13 10:02:11 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=638f40d16c9e0b01e3cb0f53d9d5703a361b2100&h=libreoffice-5-3

Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2016-12-13 11:30:22 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96068bd2c9dc17d9af7550ba5a02673c5c7eabad&h=libreoffice-5-2

Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

It will be available in 5.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2017-06-20 22:03:24 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aee66aa85e75f67135e5c6079a281e18402d261a

Resolves: tdf#105740 select without selecting.. tdf#101588 b0rk

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2017-06-21 09:15:04 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21cf4bb57665af0c7e2dad01729e8e18480c1b90&h=libreoffice-5-4

Resolves: tdf#105740 select without selecting.. tdf#101588 b0rk

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2017-07-11 17:08:04 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1096d1c237a2c4fc7497dd073d0f62bb01ffe925&h=libreoffice-5-3

Resolves: tdf#105740 select without selecting.. tdf#101588 b0rk

It will be available in 5.3.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.