Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

Comparing colors to determine whether to set one in the result item set does
not work if the color previously was set before SaveValue() was called
unconditionally even for the "undetermined" color state. Actually we want to
know whether the user selected a color instead.

Change-Id: I508f791684ebd79ba4af9cb654f9aa0bb25bff5d
(cherry picked from commit 429be969b39867d6d9f36978c9ac15b601e78ba6)
Reviewed-on: https://gerrit.libreoffice.org/31923
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>